# secret-santa-service

secret-santa-backend/: .env  Cargo.toml
secret-santa-backend/migrations/2022-12-31-133214_users/: up.sql
secret-santa-backend/migrations/2022-12-31-133318_sgroups/: down.sql  up.sql
secret-santa-backend/migrations/2022-12-31-133358_members/: up.sql
secret-santa-backend/migrations/2022-12-31-222439_santas/: down.sql  up.sql
secret-santa-backend/src/: database.rs  errors.rs  json_models.rs  main.rs  models.rs  schema.rs
secret-santa-client/: Cargo.toml
secret-santa-client/src/: main.rs
