[package]
name = "secret-santa-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0", features = ["postgres"] }
diesel-enum = { git = "https://github.com/ThouCheese/diesel-enum/", branch = "feat/diesel-2.0" }
dotenv = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
tide = "*"
futures = "*" 
rand = "*"
